# ODS.fit

./: .gitignore  LICENSE  README.md  ai-log.md  main.py  pyproject.toml
dashboard/: .gitignore  _quarto.yml  index.qmd
datos/: README.md  RESUMEN_EJECUTIVO.md
docs/: search.json
notebooks/: 001_exploracion_inicial.ipynb  001_procesamiento_colab.ipynb  002_procesamiento_local.ipynb  README.md
scripts/: README.md  analisis_exploratorio.py  limpieza_datos.py  validar_datos.py
