[project]
name = "ods-fit"
version = "0.1.0"
description = "Dashboard en Quarto para seguimiento de ODS en educación en México"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-SA-4.0" }
authors = [
    { name = "Vanessa Leonor Bustos Manríquez" },
    { name = "Gustavo Alberto Pérez Mendoza" },
    { name = "Elías Pérez Saldaña" }
]

dependencies = [
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
    "jupyter>=1.0.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
]
